multiple search engines in one lmdb, resolve #112